👽 updates for vitepack changes

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 # Vitepack Settings - used in local development only
 ################################################
 
-APP_HOST="ms-craft.test"
-APP_URL="http://${APP_HOST}"
+VITEPACK_HOST="ms-craft.test"
+VITEPACK_URL="http://${APP_HOST}"
 
 ################################################
 # Craft General Settings (environments are 'dev', 'staging', or 'production')
