--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,6 @@
         "craftcms/aws-s3": "2.0.3",
         "craftcms/cms": "4.4.7.1",
         "craftcms/redactor": "3.0.4",
-        "fortrabbit/craft-copy": "2.4.0",
         "hillholliday/craft-user-manual": "4.0.0",
         "nystudio107/craft-retour": "4.1.12",
         "nystudio107/craft-seomatic": "4.0.23",
@@ -42,8 +41,8 @@
         "allow-plugins": {
             "craftcms/plugin-installer": true,
             "yiisoft/yii2-composer": true,
-            "fortrabbit/craft-auto-migrate": true,
-            "treeware/plant": true
+            "treeware/plant": true,
+            "php-http/discovery": true
         }
     },
     "scripts": {
