Add disable auto-migrate to example env

--- a/.env.example
+++ b/.env.example
@@ -74,6 +74,7 @@ SENDGRID_API_KEY=""
 ################################################
 
 ASYNC_QUEUE_CONCURRENCY=1
+DISABLE_CRAFT_AUTOMIGRATE=1
 
 # STRIPE_PUBLIC=""
 # STRIPE_SECRET=""
