--- a/.env.example
+++ b/.env.example
@@ -51,7 +51,6 @@ AWS_CLOUDFRONT_DISTRIBUTION_ID=""
 
 # IMGIX_HOST=""
 # IMGIX_URL="https://${IMGIX_HOST}"
-# IMGIX_API_KEY=""
 
 ################################################
 # Web Fonts (if used)
@@ -73,8 +72,7 @@ SENDGRID_API_KEY=""
 # Other Integrations (if required) 
 ################################################
 
-ASYNC_QUEUE_CONCURRENCY=1
-DISABLE_CRAFT_AUTOMIGRATE=1
+# ASYNC_QUEUE_CONCURRENCY=1
 
 # STRIPE_PUBLIC=""
 # STRIPE_SECRET=""
