--- a/composer.json
+++ b/composer.json
@@ -6,24 +6,28 @@
     "repositories": [
         {
             "type": "vcs",
+            "url": "git@github.com:mostlyserious/craft-s3-logger.git"
+        },
+        {
+            "type": "vcs",
             "url": "git@github.com:mostlyserious/craft-block-audit.git"
         }
     ],
     "require": {
         "born05/craft-sentry": "2.0.1",
         "craftcms/aws-s3": "2.0.3",
-        "craftcms/cms": "4.4.7.1",
+        "craftcms/cms": "4.4.14",
         "craftcms/redactor": "3.0.4",
         "hillholliday/craft-user-manual": "4.0.0",
         "nystudio107/craft-retour": "4.1.12",
-        "nystudio107/craft-seomatic": "4.0.23",
+        "nystudio107/craft-seomatic": "4.0.28",
         "percipioglobal/craft-colour-swatches": "4.3.0",
         "percipioglobal/craft-password-policy": "4.1.0",
         "putyourlightson/craft-sendgrid": "2.0.1",
-        "sebastianlenz/linkfield": "2.1.5",
         "spicyweb/craft-embedded-assets": "3.1.5",
-        "spicyweb/craft-neo": "3.7.6",
-        "topshelfcraft/environment-label": "4.0.2",
+        "spicyweb/craft-neo": "3.8.0",
+        "topshelfcraft/environment-label": "4.0.3",
+        "verbb/hyper": "1.1.7",
         "verbb/icon-picker": "2.0.13",
         "verbb/smith": "2.0.0",
         "vlucas/phpdotenv": "^5.4.0"
@@ -43,7 +47,8 @@
             "craftcms/plugin-installer": true,
             "yiisoft/yii2-composer": true,
             "treeware/plant": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "fortrabbit/craft-auto-migrate": true
         }
     },
     "scripts": {
