--- a/bootstrap/project/project.yaml
+++ b/bootstrap/project/project.yaml
@@ -1,7 +1,10 @@
-dateModified: 1687965557
+dateModified: 1690387915
 elementSources:
   craft\elements\Entry:
     -
+      defaultSort:
+        - postDate
+        - desc
       disabled: false
       key: '*'
       tableAttributes:
@@ -12,16 +15,34 @@ elementSources:
         - link
       type: native
     -
-      key: singles
+      heading: General
+      type: heading
+    -
+      key: 'single:9d256421-0632-483e-ab16-fe4449e04977' # Home
       type: native
     -
       key: 'section:1f4732b0-84b4-4302-9a0f-687b30fdd6a0' # Pages
       type: native
     -
-      heading: ''
+      heading: Globals
+      type: heading
+    -
+      key: 'single:d12aeb65-dd35-4b14-b50e-836d83eaee1c' # Main Menu
+      type: native
+    -
+      key: 'single:1a75673f-66e1-435d-a8f3-3e174804f7f2' # Legal
+      type: native
+    -
+      key: 'single:f360da42-4605-456d-b288-2c7e66196cda' # Code
+      type: native
+    -
+      heading: Utility
       type: heading
     -
       key: 'section:d630234c-e5b7-4e5c-a00b-62c58a09595c' # Errors
+      type: native
+    -
+      key: 'single:4b728f98-2a0a-48e1-b07d-c8da68c84b37' # Module Listing
       type: native
     -
       key: 'section:04d5a0fa-7712-4c14-80b1-499740922557' # CMS Guide
@@ -44,12 +65,13 @@ fs:
     url: /assets/
 meta:
   __names__:
+    1a75673f-66e1-435d-a8f3-3e174804f7f2: Legal # Legal
     1cf7995f-6f4d-4f3d-ae1b-725d7d2dacd0: 'Menu Item' # Menu Item
     1f4732b0-84b4-4302-9a0f-687b30fdd6a0: Pages # Pages
     2a6ba873-385a-4eb8-ae76-ed9b27ccd189: 'Menu Item' # Menu Item
     3bd52b92-84f3-44de-9218-4133ee15e563: 'Body Bottom' # Body Bottom
     3dc3f5a1-bcf9-4805-9a54-f5dda1ad45a9: $PRIMARY_SITE_NAME # $PRIMARY_SITE_NAME
-    4b163ea7-a54e-41be-adc4-5f8b95859bcb: WYSIWYG # WYSIWYG
+    4b163ea7-a54e-41be-adc4-5f8b95859bcb: Text # Text
     4b728f98-2a0a-48e1-b07d-c8da68c84b37: 'Module Listing' # Module Listing
     04d5a0fa-7712-4c14-80b1-499740922557: 'CMS Guide' # CMS Guide
     6c184387-ba60-4935-8061-dd95b2f72809: SEO # SEO
@@ -66,6 +88,7 @@ meta:
     12ccab30-5c28-433b-935f-ef54025155e4: 'Featured Video' # Featured Video
     14bc7956-d13d-4317-8a7c-56b2bf6dca14: Button # Button
     17eb1569-4de9-43de-9fc2-ae39a4845d60: 'Background Image' # Background Image
+    25a03f73-3067-44ef-ac4f-c6575fc3c99a: Legal # Legal
     38b79782-e200-468f-9633-323021ffa8ca: Common # Common
     39ce1abd-a82c-4d5d-ad3a-71d3c528e717: 'Body Top' # Body Top
     39e1484c-3c1a-4d64-a2e0-ff13cccb2890: 'Public Schema' # Public Schema
@@ -73,30 +96,29 @@ meta:
     49d949e8-4a78-40f9-9039-c172ba89d3a7: Label # Label
     68fdf34e-a8b6-47ae-b3b7-4bc8fb135e54: Background # Background
     78d3d90c-61e4-4555-b7a4-556ac5117ad2: Details # Details
-    88e11325-3ef0-4ce5-ab38-637b810d3a04: WYSIWYG # WYSIWYG
+    88e11325-3ef0-4ce5-ab38-637b810d3a04: 'Rich Text' # Rich Text
     93cffabf-ec24-4999-bdbd-87b98466ab50: Buttons # Buttons
     479b628a-5c5c-4ae8-a858-b5cd1b500c20: Button # Button
+    0967ce4f-c7c2-4f10-aca7-a0c53a119604: Code # Code
     995cc5a8-988f-47f0-ac78-76d6b68f6ac6: Blocks # Blocks
     1721cab1-b289-4a13-9143-1a55e53f453d: $PRIMARY_SITE_NAME # $PRIMARY_SITE_NAME
     2422fbb8-cff2-4371-912c-b4d1db9556ef: Default # Default
     06849b6a-9229-4531-9e1f-7b2ccef2e40c: Default # Default
-    093484b2-ab15-45dc-bddf-d693ba866b3d: Code # Code
     406273f7-b865-4c09-869c-5dd130b80c62: 'Featured Image' # Featured Image
-    3512190e-891a-4d0b-8849-52dcc47d3fc6: Foobar # Foobar
     4346141d-e3ba-4871-8847-46ab08819877: Excerpt # Excerpt
-    50013135-72e9-4dd1-965e-424db1bb07b8: 'Main Menu' # Main Menu
     abf8e78e-1b0c-422c-bbff-9c89770e9906: Complex # Complex
     aca3b467-9b53-4288-91a9-eda4802a7623: Heading # Heading
+    b5cc3974-7cf3-49bc-9e8e-ae731df0e71f: 'Main Menu' # Main Menu
     b8699c81-02b6-46b7-8d48-b6a8a521454a: 'Module Listing' # Module Listing
     bdaf0b53-486b-46c0-9216-faf3ecbbd941: Details # Details
     be7373cf-5af8-4a9c-92bd-11ab39541795: Header # Header
     c5cdbc1b-1b04-45b2-a9d4-e9a17059a72d: Home # Home
     c7803b14-f9ca-4ea2-8adb-77d4730289de: Public # Public
     d6cfec69-0b38-4af7-9020-cdbbb89273ea: Code # Code
+    d12aeb65-dd35-4b14-b50e-836d83eaee1c: 'Main Menu' # Main Menu
     d630234c-e5b7-4e5c-a00b-62c58a09595c: Errors # Errors
     dd7a858b-aedd-4c3d-9443-d3dbaf10f931: 'Edit Header' # Edit Header
     e0b672d4-19dc-4015-b9bf-5b890e45e200: Video # Video
-    e3a48e48-61f7-4c2b-b415-9670085c0ca9: Legal # Legal
     e4a11e84-cba4-4478-8b0a-e57b0a240c99: Flip # Flip
     e36dbcec-7a83-47ff-ad97-dba3e4d3345b: Body # Body
     e44aa8dd-32cb-4db9-89d2-544162e2627f: Block # Block
@@ -104,6 +126,7 @@ meta:
     ec7644f6-7285-429f-9185-28284f2532a4: Global # Global
     f9c5d4a4-e78f-476b-bdb0-b2bdb6204568: Code # Code
     f93ba9ca-aed6-465b-871c-a518711b649c: Buttons # Buttons
+    f360da42-4605-456d-b288-2c7e66196cda: Code # Code
     fc1eb19e-c206-4b9a-adc3-32ed25f88eab: Head # Head
     fef5e771-2ab6-464f-b943-624452c0a52c: Body # Body
 plugins:
@@ -127,6 +150,10 @@ plugins:
     edition: standard
     enabled: true
     schemaVersion: 1.0.0
+  expanded-singles:
+    edition: standard
+    enabled: true
+    schemaVersion: 1.0.0
   hyper:
     edition: standard
     enabled: true
@@ -135,7 +162,7 @@ plugins:
   icon-picker:
     edition: standard
     enabled: true
-    licenseKey: 7P24HFL5CCLKCVMMM1GH9BRI
+    licenseKey: EQ8DJS6LLM07DS2LZZARY40W
     schemaVersion: 1.2.3
     settings:
       enableCache: true
@@ -162,7 +189,7 @@ plugins:
   retour:
     edition: standard
     enabled: true
-    licenseKey: ORSXEAGN5WH1QQTND99QYG99
+    licenseKey: 2EG2WGX199TPM0IQFPF6CNJK
     schemaVersion: 3.0.11
   sendgrid:
     edition: standard
