--- a/composer.json
+++ b/composer.json
@@ -16,18 +16,19 @@
     "require": {
         "born05/craft-sentry": "2.0.1",
         "craftcms/aws-s3": "2.0.3",
-        "craftcms/cms": "4.4.14",
+        "craftcms/cms": "4.4.16.1",
         "craftcms/redactor": "3.0.4",
         "hillholliday/craft-user-manual": "4.0.0",
         "nystudio107/craft-retour": "4.1.12",
-        "nystudio107/craft-seomatic": "4.0.28",
+        "nystudio107/craft-seomatic": "4.0.30",
         "percipioglobal/craft-colour-swatches": "4.3.0",
         "percipioglobal/craft-password-policy": "4.1.0",
         "putyourlightson/craft-sendgrid": "2.0.1",
         "spicyweb/craft-embedded-assets": "3.1.5",
-        "spicyweb/craft-neo": "3.8.0",
+        "spicyweb/craft-neo": "3.8.3",
         "topshelfcraft/environment-label": "4.0.3",
-        "verbb/hyper": "1.1.7",
+        "verbb/expanded-singles": "2.0.4",
+        "verbb/hyper": "1.1.10",
         "verbb/icon-picker": "2.0.13",
         "verbb/smith": "2.0.0",
         "vlucas/phpdotenv": "^5.4.0"
