✨ Javascript typechecking with jsdocs

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -12,8 +12,8 @@ RewriteEngine On
 # RewriteRule (.*) https://%{HTTP_HOST}/$1 [R=301,L]
 
 # Permanently redirect trailing slash -> to no trailing slash
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)/$ /$1 [L,R=301]
+# RewriteCond %{REQUEST_FILENAME} !-d
+# RewriteRule ^(.*)/$ /$1 [L,R=301]
 
 # Or do the opposite, and permanently redirect no trailing slash -> to slash
 # RewriteCond %{REQUEST_FILENAME} !-f
