--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "license": "UNLICENSED",
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
@@ -8,15 +9,17 @@
     },
     "devDependencies": {
         "@axe-core/webdriverjs": "^4.4.4",
-        "@mostlyserious/vitepack": "^1.1.1",
+        "@mostlyserious/vitepack": "^1.3.0",
         "@tailwindcss/typography": "^0.5.9",
-        "postcss": "^8.4.24",
+        "@tsconfig/svelte": "^5.0.2",
+        "postcss": "^8.4.28",
         "postcss-functions": "^4.0.2",
         "postcss-import": "^15.1.0",
-        "postcss-preset-env": "^8.5.1",
+        "postcss-preset-env": "^9.1.1",
         "selenium-webdriver": "^4.4.0",
-        "svelte": "^4.0.0",
-        "tailwindcss": "^3.3.2",
+        "svelte": "^4.2.0",
+        "tailwindcss": "^3.3.3",
+        "typescript": "^5.1.6",
         "uvu": "^0.5.6"
     }
 }
