--- a/web/static/manifest.json
+++ b/web/static/manifest.json
@@ -1,66 +1,52 @@
 {
-  "src/js/main.js": {
-    "file": "assets/main.00ad0dfc.js",
-    "src": "src/js/main.js",
+  "src/js/cp.css": {
+    "file": "assets/cp-58c915f8.css",
+    "src": "src/js/cp.css"
+  },
+  "src/js/cp.js": {
+    "css": [
+      "assets/cp-58c915f8.css"
+    ],
+    "file": "assets/cp-b165cf45.js",
     "isEntry": true,
+    "src": "src/js/cp.js"
+  },
+  "src/js/main.css": {
+    "file": "assets/main-4d1ee139.css",
+    "src": "src/js/main.css"
+  },
+  "src/js/main.js": {
+    "css": [
+      "assets/main-4d1ee139.css"
+    ],
     "dynamicImports": [
       "src/js/modules/intro.js",
       "src/js/modules/property.js",
       "src/js/modules/toggle.js",
-      "_svelte.8f655229.js"
+      "src/js/svelte.js"
     ],
-    "css": [
-      "assets/main.bf2f9941.css"
-    ]
-  },
-  "src/js/cp.js": {
-    "file": "assets/cp.25187014.js",
-    "src": "src/js/cp.js",
+    "file": "assets/main-ec1cd42d.js",
     "isEntry": true,
-    "css": [
-      "assets/cp.f476e34d.css"
-    ]
+    "src": "src/js/main.js"
   },
   "src/js/modules/intro.js": {
-    "file": "assets/intro.24b75ae2.js",
-    "src": "src/js/modules/intro.js",
-    "isDynamicEntry": true
+    "file": "assets/intro-4ffaa4c2.js",
+    "isDynamicEntry": true,
+    "src": "src/js/modules/intro.js"
   },
   "src/js/modules/property.js": {
-    "file": "assets/property.2ea691f2.js",
-    "src": "src/js/modules/property.js",
-    "isDynamicEntry": true
+    "file": "assets/property-1a82a447.js",
+    "isDynamicEntry": true,
+    "src": "src/js/modules/property.js"
   },
   "src/js/modules/toggle.js": {
-    "file": "assets/toggle.b14e04ba.js",
-    "src": "src/js/modules/toggle.js",
-    "isDynamicEntry": true
-  },
-  "_svelte.8f655229.js": {
-    "file": "assets/svelte.8f655229.js",
+    "file": "assets/toggle-4a2c89d1.js",
     "isDynamicEntry": true,
-    "imports": [
-      "src/js/main.js"
-    ],
-    "dynamicImports": [
-      "src/js/store.js"
-    ]
+    "src": "src/js/modules/toggle.js"
   },
-  "src/js/store.js": {
-    "file": "assets/store.a3c4d2a9.js",
-    "src": "src/js/store.js",
+  "src/js/svelte.js": {
+    "file": "assets/svelte-b7f91d8d.js",
     "isDynamicEntry": true,
-    "imports": [
-      "_svelte.8f655229.js",
-      "src/js/main.js"
-    ]
-  },
-  "src/js/cp.css": {
-    "file": "assets/cp.f476e34d.css",
-    "src": "src/js/cp.css"
-  },
-  "src/js/main.css": {
-    "file": "assets/main.bf2f9941.css",
-    "src": "src/js/main.css"
+    "src": "src/js/svelte.js"
   }
 }
