--- a/composer.json
+++ b/composer.json
@@ -11,20 +11,25 @@
         {
             "type": "vcs",
             "url": "git@github.com:mostlyserious/craft-block-audit.git"
+        },
+        {
+            "type": "composer",
+            "url": "https://composer.craftcms.com",
+            "canonical": false
         }
     ],
     "require": {
         "born05/craft-sentry": "2.0.1",
         "craftcms/aws-s3": "2.0.3",
-        "craftcms/cms": "4.5.0",
+        "craftcms/cms": "4.5.4",
         "craftcms/redactor": "3.0.4",
         "hillholliday/craft-user-manual": "4.0.0",
         "nystudio107/craft-retour": "4.1.13",
-        "nystudio107/craft-seomatic": "4.0.30",
+        "nystudio107/craft-seomatic": "4.0.31",
         "percipioglobal/craft-colour-swatches": "4.3.0",
         "percipioglobal/craft-password-policy": "4.1.0",
         "putyourlightson/craft-sendgrid": "2.0.1",
-        "spicyweb/craft-embedded-assets": "3.1.6",
+        "spicyweb/craft-embedded-assets": "3.1.8",
         "spicyweb/craft-neo": "3.8.6",
         "topshelfcraft/environment-label": "4.0.3",
         "verbb/expanded-singles": "2.0.5",
